# Advent-of-Code-2020

./: .gitignore  README.md  requirements.txt
days/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
days/etc/: d16.py  d18.py  d19.py  d20.py  d22.py  d23.py  handheld_console.py  utils.py
input/: day01.txt  day01_bigboy.txt  day08_bigboy.txt  day11.txt  day11_bigboy.txt  day13.txt  day13_bigboy.txt  day14_bigboy.txt
rust/: Cargo.toml  README.md
rust/src/: main.rs  utils.rs
rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
rust/src/etc/: d18.rs  d19.rs  d20.rs  mod.rs  utils.rs
